<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="140dp"
    android:layout_weight="0.26"
    android:id="@+id/layout_subject">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o_grade"
        android:id="@+id/button_oGrade"
        android:layout_gravity="left|center_vertical" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_grade"
        android:id="@+id/button_eGrade"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_grade"
        android:id="@+id/button_aGrade"
        android:layout_gravity="right|center_vertical" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b_grade"
        android:id="@+id/button_bGrade"
        android:layout_gravity="left|bottom" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c_grade"
        android:id="@+id/button_cGrade"
        android:layout_gravity="center_horizontal|bottom" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_grade"
        android:id="@+id/button_dGrade"
        android:layout_gravity="right|bottom" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_grade"
        android:id="@+id/button_fGrade"
        android:layout_gravity="right|top" />

    <RelativeLayout
        android:layout_width="274dp"
        android:layout_height="50dp"
        android:layout_gravity="left|top">

        <TextView
            android:layout_width="274dp"
            android:layout_height="30dp"
            android:text="@string/subject_name"
            android:id="@+id/textView_subject_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/subject_code"
            android:id="@+id/textView_subject_code"
            android:layout_below="@+id/textView_subject_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/subject_credit"
            android:id="@+id/textView_subject_credit"
            android:layout_below="@+id/textView_subject_name"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</FrameLayout>